; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_jsonb_utils.c_ts_jsonb_add_pair.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_jsonb_utils.c_ts_jsonb_add_pair.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WJB_KEY = common dso_local global i32 0, align 4
@WJB_VALUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i32*)* @ts_jsonb_add_pair to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ts_jsonb_add_pair(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 @Assert(i32 %9)
  %11 = load i32*, i32** %5, align 8
  %12 = icmp ne i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @Assert(i32 %13)
  %15 = load i32*, i32** %6, align 8
  %16 = icmp eq i32* %15, null
  br i1 %16, label %17, label %18

17:                                               ; preds = %3
  br label %25

18:                                               ; preds = %3
  %19 = load i32, i32* @WJB_KEY, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @pushJsonbValue(i32** %4, i32 %19, i32* %20)
  %22 = load i32, i32* @WJB_VALUE, align 4
  %23 = load i32*, i32** %6, align 8
  %24 = call i32 @pushJsonbValue(i32** %4, i32 %22, i32* %23)
  br label %25

25:                                               ; preds = %18, %17
  ret void
}

declare dso_local i32 @Assert(i32) #1

declare dso_local i32 @pushJsonbValue(i32**, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
